# redis-6.0.2-cmake-clion

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  redis-cli  redis-server
debug/: create_cluster.sh  redis-cluster-8000.conf  redis-cluster-8001.conf  redis-cluster-8002.conf  start.sh
debug/data/: nodes-8000.conf
debug/data/8001/: nodes-8001.conf
debug/data/8002/: nodes-8002.conf
src/: .make-settings  ae.d  aof.d  config.d  db.d  debug.d  dict.d  multi.d  networking.d  object.d  pubsub.d  quicklist.d  rdb.d  release.h  replication.d  server.d  sort.d  t_hash.d  t_list.d  t_set.d  t_string.d  t_zset.d
